--- a/src/templates/profile/freelancer_profile.html
+++ b/src/templates/profile/freelancer_profile.html
@@ -208,12 +208,14 @@
         </div>
 
         <!-- Botón para agregar calificación -->
+         {% if not is_owner %}
         <div class="mt-8 text-center">
             <a href="javascript:void(0)" onclick="openRatingModal()"
                 class="inline-block bg-primary_medium text-white px-6 py-3 rounded-lg hover:bg-primary_dark transition-colors">
                 Calificar
             </a>
         </div>
+        {% endif %}
     </div>
 
     <!-- Modal para Responder a la Calificación -->
