--- a/src/templates/navigation/navbar.html
+++ b/src/templates/navigation/navbar.html
@@ -11,7 +11,7 @@
     </div>
 
     <!-- Main Menu -->
-    <div class="text-primary_light p-3 mt-3">MAIN MENU</div>
+    <div class="text-primary_lightest p-3 mt-3">MAIN MENU</div>
 
     <div class="flex flex-col gap-1">
       <!-- Dashboard Link -->
