--- a/src/templates/profile/freelancer_profile.html
+++ b/src/templates/profile/freelancer_profile.html
@@ -6,10 +6,10 @@
     <!-- Información del Freelancer -->
     <div class="w-full bg-bg_gray shadow-lg rounded-lg p-8">
         <div class="flex flex-col sm:flex-row items-center sm:items-start">
-            <img src="{% if profile.photo %}{{ profile.photo.url }}{% else %}https://avatars.githubusercontent.com/u/1561955?v=4{% endif %}"
-                alt="Foto de {{ profile.user.username }}" class="w-24 h-24 sm:w-32 sm:h-32 rounded-full shadow-lg">
+            <img src="{% if request.profile.photo %}{{ request.profile.photo.url }}{% else %}https://avatars.githubusercontent.com/u/1561955?v=4{% endif %}"
+                alt="Foto de {{ request.profile.user.username }}" class="w-24 h-24 sm:w-32 sm:h-32 rounded-full shadow-lg">
             <div class="sm:ml-6 mt-6 sm:mt-0 flex-1">
-                <h1 class="text-3xl sm:text-3xl font-bold text-primary_medium">{{ profile.user.username }}</h1>
+                <h1 class="text-3xl sm:text-3xl font-bold text-primary_medium">{{ request.profile.user.username }}</h1>
                 <p class="text-primary_black font-semibold">Desarrollador Full Stack</p>
                 <p class="text-primary_black mt-2">
                     Apasionado del desarrollo web con más de 5 años de experiencia en la creación de aplicaciones
@@ -35,10 +35,12 @@
                         {% include 'icon/GithubIcon.html' %}
                     </a>
                 </div>
+                {% if is_owner %}
                 <button
                 class="bg-primary_medium text-white px-4 py-2 rounded-xl mt-4 hover:bg-primary_dark transition-transform duration-300 hover:scale-110">
                     Editar Perfil
                 </button>
+                {% endif %}
             </div>
         </div>
 
@@ -137,8 +139,8 @@
     <!-- Curriculum Vitae -->
     <div class="w-full bg-bg_gray shadow-lg rounded-lg mt-8 p-8">
         <h2 class="text-2xl font-bold text-primary_black">Curriculum Vitae</h2>
-        {% if profile.freelancer_cv and profile.freelancer_cv.file %}
-        <a href="{{ profile.freelancer_cv.file.url }}" class="text-purple-600 hover:text-purple-500 underline">Descargar
+        {% if request.profile.freelancer_cv and request.profile.freelancer_cv.file %}
+        <a href="{{ request.profile.freelancer_cv.file.url }}" class="text-purple-600 hover:text-purple-500 underline">Descargar
             Curriculum</a>
         {% else %}
         <p class="text-gray-500">No se ha subido ningún CV aún.</p>
@@ -163,6 +165,7 @@
                 <p class="mt-4 text-gray-700 text-md">{{ rating.comment }}</p>
 
                 <!-- Botones para acciones del comentario (Editar o Eliminar) -->
+                {% if rating.client.username == viewer.username %}
                 <div class="flex justify-end space-x-4 mt-2">
                     <!-- Eliminar comentario -->
                     <form action="{% url 'delete_rating' rating.id %}" method="post" class="inline">
@@ -173,9 +176,10 @@
                         </button>
                     </form>
                 </div>
+                {% endif %}
 
-                {% if rating.response %}
                 <!-- Respuesta del Freelancer -->
+                {% if rating.response %}
                 <div class="mt-4 bg-gray-100 rounded-lg p-4 border border-gray-200">
                     <p class="text-sm text-gray-600"><strong>Respuesta:</strong> {{ rating.response.response_text }}</p>
                     <div class="flex justify-end space-x-4 mt-2">
@@ -193,13 +197,16 @@
                     </div>
                 </div>
                 {% else %}
+
                 <!-- Botón para responder si no hay respuesta -->
+                {% if is_owner %}
                 <div class="mt-4">
                     <a href="javascript:void(0)" onclick="openResponseModal('{{ rating.id }}')"
                         class="inline-block bg-primary_medium text-white px-4 py-2 rounded-md hover:bg-primary_dark transition-colors">
                         Responder a esta calificación
                     </a>
                 </div>
+                {% endif %}
                 {% endif %}
             </div>
             {% empty %}
@@ -208,7 +215,7 @@
         </div>
 
         <!-- Botón para agregar calificación -->
-         {% if not is_owner %}
+        {% if not is_owner %}
         <div class="mt-8 text-center">
             <a href="javascript:void(0)" onclick="openRatingModal()"
                 class="inline-block bg-primary_medium text-white px-6 py-3 rounded-lg hover:bg-primary_dark transition-colors">
@@ -241,7 +248,7 @@
     <div id="ratingModal" class="fixed inset-0 z-50 flex items-center justify-center hidden bg-black bg-opacity-50">
         <div class="bg-white rounded-lg shadow-lg w-96 p-6 relative">
             <button class="absolute top-2 right-2 text-primary_dark" onclick="closeRatingModal()">&times;</button>
-            <h2 class="text-2xl font-bold mb-4 text-primary_black">Calificar a {{ profile.user.username }}</h2>
+            <h2 class="text-2xl font-bold mb-4 text-primary_black">Calificar a {{ request.profile.user.username }}</h2>
 
             <form id="ratingForm" method="POST">
                 {% csrf_token %}
@@ -353,7 +360,7 @@
 
             const formData = new FormData(this);
 
-            fetch("{% url 'add_rating' profile.user.username %}", {
+            fetch("{% url 'add_rating' request.profile.user.username %}", {
                 method: 'POST',
                 headers: {
                     'X-Requested-With': 'XMLHttpRequest',
