--- a/src/templates/projects/project_card.html
+++ b/src/templates/projects/project_card.html
@@ -1,12 +1,41 @@
 {% load i18n %}
-<div class="bg-white rounded-lg shadow-md overflow-hidden transition-transform transform hover:scale-105 hover:shadow-lg duration-300">
-    <div class="bg-purple-600 h-32"></div>
-    <div class="p-4">
-        <h2 class="text-xl font-semibold mb-2">{{ project.title }}</h2>
-        <p class="text-gray-600 mb-4">{{ project.description|truncatewords:20 }}</p>
-        <div class="flex justify-between items-center">
-            <span class="text-sm text-gray-500">{% translate "Presupuesto: $"%}{{ project.budget }}</span>
-            <a href="/project/{{project.id}}/milestone" class="text-blue-500 hover:underline">{% translate "Ver Detalles" %}</a>
+{% if not list %}
+<div class="bg-white rounded-lg shadow-md transition-transform transform hover:shadow-lg duration-300 w-[300px] h-[290px] flex flex-col overflow-hidden">
+    <!-- Image or placeholder -->
+    <div class="h-28 w-full bg-purple-600">
+        {% if project.image %}
+        <img src="{{ project.image.url }}" alt="{{ project.title }}" class="object-cover h-full w-full">
+        {% endif %}
+    </div>
+
+    <!-- Content -->
+    <div class="p-4 flex flex-col flex-grow justify-between">
+        <div>
+            <h2 class="text-base text-primary_black font-semibold mb-2">{{ project.title }}</h2>
+            <p class="text-sm text-gray-600">{{ project.description|truncatewords:20 }}</p>
+        </div>
+
+        <!-- Footer -->
+        <div class="flex justify-between items-center mt-2">
+            <span class="text-sm text-gray-500">{% translate "Presupuesto: $" %}{{ project.budget }}</span>
+            <a href="/project/{{ project.id }}/milestone" class="text-blue-500 hover:underline">{% translate "Ver Detalles" %}</a>
         </div>
     </div>
 </div>
+{% else %}
+
+<div class="bg-white rounded-lg shadow-md hover:shadow-lg duration-300 w-full flex flex-col overflow-hidden px-6 py-3 gap-1">
+
+    <p class="text-xs text-primary_light font-semibold">{{ project.pending_tasks }} {% translate "Tareas Pendientes" %}</p>
+
+    <div class="flex justify-between items-center">
+        <h2 class="text-sm text-primary_black font-semibold">{{ project.title }}</h2>
+        <p class="text-xs text-black">{{ project.progress }}%</p>
+    </div>
+
+    <div class="w-full bg-gray-200 rounded-full h-2">
+        <div class="bg-primary_light h-2 rounded-full" style="width: {{ project.progress }}%"></div>
+    </div>
+</div>
+
+{% endif %}
