--- a/src/templates/navigation/navigation.html
+++ b/src/templates/navigation/navigation.html
@@ -6,7 +6,7 @@
     <div class="invisible md:visible w-64 fixed">
         {% include "navigation/navbar.html" %}
     </div>
-    <div class="w-full px-9 py-2 md:ml-64">
+    <div class="w-full md:pl-72 px-7 py-2">
         <div class="flex flex-col gap-5">
             {% include "navigation/top_bar_controls.html" %}
             <!-- Aqui va el content -->
